--- a/Proposal.tex
+++ b/Proposal.tex
@@ -4,7 +4,6 @@
 
 \documentclass[twoside,fontsize=10pt]{article}
 %\documentclass[oneside]{article}
-
 \usepackage{lipsum} % Package to generate dummy text throughout this template
 \usepackage{graphicx}
 
@@ -88,30 +87,30 @@ Summary of the research
 \end{center}}    % clear the title
 \begin{abstract}
 \noindent
-To date, studies on non-coding regions of the genome, specifically in cancer, have been limited. This is mainly due to the complex nature of putative functional elements in these regions. In parallel with the ENCODE-project, the interest in these regions has increased: researchers are beginning to study causal non-coding variations in cancer. Due to the increase in popularity and cost-effectiveness of various omics-approaches, more and more data is becoming available. The complexity of integrating and analysing information of these approaches increases with every added omics-layer and/or other dimension (e.g. time-series, treatments). When studying the consequences of structural variants in non-coding regions in cancer, this complexity is further increased due to, for example, heterozygous samples and rapid evolution.
+To date, studies on non-coding regions of the genome, specifically in cancer, have been limited. This is mainly due to the complex nature of putative functional elements in these regions. In parallel with the ENCODE-project, the interest in these regions has increased: researchers are beginning to study causal non-coding variations in cancer\cite{Benko2009,Kurth2009}. Due to the increase in popularity and cost-effectiveness of various omics-approaches, more and more data is becoming available. The complexity of integrating and analysing information of these approaches increases with every added omics-layer and/or dimension (e.g. time-series, treatments). When studying the consequences of structural variants in non-coding regions in cancer, this complexity is further increased due to cancer-specific (e.g. heterogeneous samples, rapid evolution) and structural variant-specific (e.g. multiple types and consequences) factors.
 \medskip
 
 \noindent
- The current tools and frameworks for these approaches have two major limitations in their design: scalability and generality (i.e. the possibility to add of more levels and/or dimensions). Moreover, there isn't an option to overview a dataset without filtering, dividing or structuring the data. These limitations restrict the integration of complex datasets, which is needed to truly understand the complex biology of cancer.
+The current methods for integrating and analysing these layers and dimensions have two major limitations in their design: scalability and generality (i.e. the possibility to add more levels and/or dimensions). Moreover, there isn't an option to overview a dataset without filtering, dividing or restructuring the data. These limitations restrict the integration of complex datasets, which is needed to truly understand the complex biology of cancer\citet{Munoz2011}.
 \medskip
 
 \noindent Enter the Semantic Web and its Resource Description Framework (RDF). A simple and flexible framework for describing anything about anything.
 % An example of such a RDF-instance (a triple) is "BRAF1 has the molecular function of binding calcium ion", which has these three parts: a subject (BRAF1), a predicate (molecular function) and an object (binding calcium ion). Another triple can then say something about the phosphorylated protein levels of this gene in a sample. Connecting these two triples would enable a researcher to find a possible pattern in the data (i.e. a gene, responsible for calcium ion binding, has a low phosphorylation level in the investigated sample). 
-Since every type of data can be translated to RDF, integration of large datasets of different levels and dimensions becomes possible and a lot more feasible. Both local and remote data can be easily combined (EMBL-EBI has already launched six databases, including UniProt and Reactome), which makes analyses even more powerful. By using the SPARQL Protocol and RDF Query Language (SPARQL), retrieving and manipulating data in RDF is easily readable by both humans and computers. The SPARQL-results can subsequently be visualized as a whole, or filtered by the user. 
+Since every type of data can be translated to this universal language, integration of large datasets of different levels and dimensions becomes possible and a lot more feasible. When researchers have translated their local data to RDF, they can easily connect and combine it with public repositories (EMBL-EBI has already launched six databases, including UniProt and Reactome), which makes analyses even more powerful. By using the SPARQL Protocol and RDF Query Language (SPARQL), retrieving and manipulating data in RDF is easily readable by both humans and computers. The SPARQL-results can subsequently be visualized as a whole, or filtered by the user. 
 \medskip
 
-\noindent Here, we propose the use of semantic web technologies and visual analytics to decrease the complexity of integrating and visualizing multi-level and -dimensional biological data. Firstly, we will create the framework needed to design the missing tools for converting the most-used NGS-formats to RDF. Next, methods and tools for visual analytics of the biological RDF-data will be created, which will be used to perform previously impossible integration-focussed analyses on the consequences of structural variation in the non-coding regions of cancer-genomes.
+\noindent Here, we propose the use of semantic web technologies and visual analytics to decrease the complexity of integrating and visualizing multi-level and -dimensional biological data, thereby enabling further elucidation of the complex biology of, for example, cancer. Firstly, we will create the framework needed to design the missing tools for converting the most-used NGS-formats to RDF. Next, visualisations (based on visual analytics) of the biological RDF-data will be created, which will be used to perform previously impossible integration-focussed analyses on the consequences of structural variation in the non-coding regions of cancer-genomes.
 \end{abstract}
 \medskip
 \renewcommand{\abstractname}{\begin{center}
 Layman's summary
 \end{center}}    % clear the title
 \begin{abstract}\noindent
-The biomedical research community wants to be able to study more biological signals than one at the same time, because the biology of, for example, cancer is so complex. However, integrating diverse sets of biological signals is currently a major challenge. To overcome this, we propose the use of Semantic Web-methods: these are specifically designed for integrating vast amounts of different data. Furthermore, it allows users to describe, analyse and test their data interactively and dynamically via visual representations displayed in the browser. 
+The biomedical research community wants to be able to combine and analyse a multitude of biological signals in one experiment, because the biology of, for example, cancer is so complex. However, integrating diverse sets of biological signals is currently a major challenge. To overcome this, we propose the use of Semantic Web-methods: these are specifically designed for integrating vast amounts of different data. Furthermore, it allows users to describe, analyse and test their data interactively and dynamically via visual representations displayed in the browser. 
 
-Research on non-coding genomic regions, for example, would benefit greatly from these methods. It would enable studies on the complex cancer-causing consequences of changes in parts of chromosomes that do not hold a gene.
+Research on non-coding genomic regions, for example, would benefit greatly from these methods. It would enable studies on the complex cancer-causing consequences of changes in parts of chromosomes that do not contain a gene.
 
-A preliminary study shows the added value of such methods in biology: researchers are able to describe, analyse and test 20 times more biological questions in the same time, compared to conventional methods. We thus propose to develop these methods further for the research-community (and biology in particular), enabling us to perform research on variations in the non-coding genomic regions in cancer. \\
+A preliminary study shows the added value of such methods in biology: researchers are able to describe, analyse and test 20 times more biological questions in the same time, compared to conventional methods. We propose to develop these methods further for the research-community (and biology in particular), enabling us to perform research on variations in the non-coding genomic regions in cancer. \\
 \medskip
 
 \noindent \textbf{Keywords:} structural variation, multi-level data integration, next-generation sequencing, cancer, visual analytics
@@ -144,9 +143,9 @@ Multi-level and -dimensional integrative bioinformatical analysis to elucidate t
 %=================================================
 %=================================================
 %stukje over cancer%Moreover, there already have been successfully studies, linking non-coding regions to colorectal- and skin-cancer\cite{Ongen2014,Huang2013}. 
-The majority of genomics studies are focussed on finding causal genetic variation in the protein-coding regions of the genome. However, these regions amount only to approximately two percent\cite{Lander2001}. One of the major reasons behind this is the relative uncomplicated nature of studying coding regions, as consequences on lower levels (e.g. transcription, proteins) are traceable\cite{McLaren2010}. This is in contrast with the non-coding regions, which often do not show a linear effect on other levels. A good illustration of the complexity of the non-coding regions is the ENCyclopedia Of DNA Elements (ENCODE)-project\cite{ENCODE}, which contains over fifty different signals. 
+The majority of genomics studies are focussed on finding causal genetic variation in the protein-coding regions of the genome. However, these regions amount only to approximately two percent\cite{Lander2001}. One of the major reasons behind this is the relative uncomplicated nature of studying coding regions, as consequences on lower levels (e.g. transcription, proteins) are traceable\cite{McLaren2010}. This is in contrast to the non-coding regions, which often do not show a linear effect on other levels\cite{Bird2006}. A good illustration of the complexity of the non-coding regions is the ENCyclopedia Of DNA Elements (ENCODE)-project\cite{ENCODE}, which contains over fifty different signals (e.g. histone methylation, DNase1 hypersensitivity). 
 
-The fact that non-coding regions often have roles in regulation of a distant genes (i.e. cis-acting), provides even more complexity to the analysis of structural variants (SV) in these regions. For example the Pierre Robin Syndrome (PRS): structural variations (deletions or duplications) in the 3Mb surrounding the SOX9-gene in specific tissues, are causative to the striking phenotype of undeveloped mandibles and tongue in children\cite{Benko2009,Kurth2009}. Studies on cancer-specific causative non-coding variation are beginning to emerge in the last two years, including colorectal- and skin-cancer\cite{Ongen2014,Huang2013}, and computational methods for non-coding regions are just starting to come up in the literature of 2014\cite{Khurana2013,Kircher2014}.  
+The fact that non-coding regions often have roles in regulation of a distant genes (i.e. cis-acting), provides even more complexity to the analysis of structural variants (SVs) in these regions. For example the Pierre Robin Syndrome (PRS): structural variations (deletions or duplications) in the 3Mb surrounding the SOX9-gene in specific tissues, are causative of the striking phenotype of undeveloped mandibles and tongue in children\cite{Benko2009,Kurth2009}. Studies on cancer-specific causative non-coding variation are beginning to emerge in the last two years, including colorectal- and skin-cancer\cite{Ongen2014,Huang2013}, and computational methods for non-coding regions are just starting to come up in the literature of 2014\cite{Khurana2013,Kircher2014}.  
 \medskip
 
 \noindent
@@ -158,7 +157,8 @@ However, only a few layers and/or dimensions have been integrated per study and 
 \noindent
 To overcome these scaling issues, \textbf{we propose the use of the Semantic Web: the \textit{Resource Description Framework} (RDF) and its query-language \textit{SPARQL Protocol and RDF Query Language} (SPARQL)}. RDF is a general and simple framework for making statements about subjects, already heavily used in fields outside of biology, enabling users to integrate and search data based on semantics. Within biology, RDF is only used sparsely and mainly focussed on external data-source integration and not on own data \cite{Belleau2008,Neumann2006,Sahoo2008}. Every RDF-statement (i.e. a triple) has three parts: a subject, a predicate and an object (e.g. \lstinline|BRAF1 :: molecular function :: calcium ion binding|). This makes it possible to link every object to another and denote the relationship between them: no additional (file)formats are needed (fig.\ref{fig:rdf}). 
 
-Compared to other relational database management systems, RDF is completely flexible: no database-schemas (pre-specified structures for the data, like the mySQL-method of \citet{Low2013}) are needed. Aside from the non-complex, flexible and self-describing nature of the RDF-data, triples can be seen as a modular directed graph: users can combine multiple relevant RDF-sources (e.g. UniProt and/or Proteomics-data). Every additional RDF-source results in a more relevant and heterogeneous population of triples, making the network more complex and informative. Extracting relevant information from this "hairball" of linked objects and subjects has been a major issue and challenge since the beginning of big data, as \citet{Pavlopoulos2008} stated in 2008. SPARQL provides the ability to filter on an arbitrary number of (human-readable) expressions and can combine multiple databases to query, like the RDF-databases of EMBL-EBI \citep{Jupp2014}. Another advantage of using Semantic Web-technologies are federated queries in SPARQL (i.e. including multiple triplestores in the same query). These increase the scalability of RDF by enabling the use of small, specific triplestores, which results in faster retrieval of the data.
+Compared to other relational database management systems, RDF is completely flexible: no database-schemas (pre-specified structures for the data, like the mySQL-method of \citet{Low2013}) are needed. Aside from the non-complex, flexible and self-describing nature of the RDF-data, triples can be seen as a modular directed graph: users can combine multiple relevant RDF-sources (e.g. UniProt and/or Proteomics-data). Every additional RDF-source results in a more relevant and heterogeneous population of triples, making the network more complex and informative. Extracting relevant information from this "hairball" of linked objects and subjects has been a major issue and challenge since the beginning of big data, as \citet{Pavlopoulos2008} stated in 2008. SPARQL provides the ability to filter on an arbitrary number of (human-readable) expressions and can combine multiple databases to query, like the RDF-databases of EMBL-EBI \citep{Jupp2014}. Another advantage of using SPARQL is the increase in scalability by including multiple triplestores in the same query. Such a federated query results in faster retrieval of the data, by enabling the use of small, specific triplestores.
+
 \medskip
 \begin{figure}[H]
     \centering
@@ -196,9 +196,9 @@ The 2014 survey of \citet{Gomez-Cabrero2014} showed that biomedical academics ha
 \medskip
 
 \noindent
-There have already been various studies on integration of biological signals with the aid of semantic web technologies, as the power of ontology-based entailment reasoning is widely acknowledged\cite{Sahoo2008}. However, the momentum was lacking: until 2014, big databases were not available in RDF-format. This meant that bioinformatical research involving RDF had little to none outside support, as they could only integrate their own data, like the integration of RDF-methods in microarray analyses by \citet{Szpakowski2009} in 2009. Recently, EMBL-EBI has opened their own RDF-platfom, boasting six big data-sources (Gene Expression Atlas, ChEMBL, BioModels, Reactome, BioSamples and UniProt)\cite{Jupp2014}. This was the boost needed to further incorporate RDF in biological analyses.
+There have been various studies on integration of biological signals with the aid of semantic web technologies, as the power of ontology-based entailment\footnote{The logical consequence of having two linked ontologies, thereby inferring an additional, encompassing relationship on the shared object/subject} reasoning is widely acknowledged\cite{Sahoo2008}. However, the momentum was lacking: until 2014, big databases were not available in RDF-format. This meant that bioinformatical research involving RDF had little to no outside support, as they could only integrate their own data, like the integration of RDF-methods in microarray analyses by \citet{Szpakowski2009} in 2009. Recently, EMBL-EBI has opened their own RDF-platfom, boasting six big data-sources (Gene Expression Atlas, ChEMBL, BioModels, Reactome, BioSamples and UniProt)\cite{Jupp2014}. This was the boost needed to further incorporate RDF in biological analyses.
 
-However, there are two main limitations of this relatively young incorporation: a standard language for denoting biological triples (e.g. chromosome locations) is missing and the focus lies at linking database-accessions \citep{Ruttenberg2007}. While the first limitation is also a strength (everybody can use their own dialect), a standardisation-step will lower the learning-curve, which will enable researchers in all fields of biology to fully benefit from the integrative benefits of the Semantic Web. The second limitation is  severely restricting the use of RDF in NGS- and MS-based methods: there are no tools to convert the common formats, like the \textit{Variant Call Format} (VCF) and \textit{Sequence Alignment Format} (SAM), to triples. An example of this is  \textit{Bio2RDF}\cite{Belleau2008}: a "\textit{RDFizer}", which converts common databases, like the ones from NCBI, to triplestores. One of the main innovative points of our proposal is the development of methods to handle the NGS- and MS-based formats for use in the Semantic Web. This will result in a broader use of semantic web-technologies for the research community, by enabling the coupling of proprietary NGS- and MS-data to existing RDF-databases.
+However, there are two main limitations of this relatively young incorporation: a standard language for denoting biological triples (e.g. chromosome locations) is missing and the focus lies at linking database-accessions \citep{Ruttenberg2007}. While the first limitation could also be a strength (everybody can use their own dialect), a standardisation-step will lower the learning-curve, which will enable researchers in all fields of biology to fully benefit from the integrative benefits of the Semantic Web. The second limitation is  severely restricting the use of RDF in NGS- and MS-based methods: there are no tools to convert the common formats, like the \textit{Variant Call Format} (VCF) and \textit{Sequence Alignment Format} (SAM), to triples. An example of this is  \textit{Bio2RDF}\cite{Belleau2008}: a "\textit{RDFizer}", which converts common databases, like the ones from NCBI, to triplestores. One of the main innovative points of our proposal is the development of methods to handle the NGS- and MS-based formats for use in the Semantic Web. This will result in a broader use of semantic web-technologies for the research community, by enabling the coupling of proprietary NGS- and MS-data to existing RDF-databases.
 \medskip
 
 \noindent
@@ -214,10 +214,12 @@ The implementation of web-based visual analytics for RDF-databases is another ma
 \medskip
 
 \noindent
-While there has already been a large amount of work in the field of computational cancer research, the vast majority of large-scale integrative studies have been performed on the coding-regions (which account for 1,5 percent of the total size) of the genome\cite{ENCODE}. Genome-Wide Association Studies (GWASs) on a broad range of (hereditary) cancer-types have shown, that non-coding locations are associated with these diseases. Until 2013, however, tools and sources to find the precise causative variations in non-coding genomic regions were limited. In the last two years, several advances have made it possible to asses the consequences of individual variations in non-coding regions\cite{Ongen2014,Khurana2013}, but no large-scale integrative studies have been performed (partly due to the current state of integrative methods). With the new methods, we will be in the position to perform fully integrative studies on the underlying mechanisms and consequences of (structural) variation in cancer.
+While there has already been a large amount of work in the field of computational cancer research, the vast majority of large-scale integrative studies have been performed on the coding-regions (which account for 2 percent of the total size) of the genome\cite{ENCODE}. Genome-Wide Association Studies (GWASs) on a broad range of (hereditary) cancer-types have shown, that non-coding locations are associated with these diseases. Until 2013, however, tools and sources to find the precise causative variations in non-coding genomic regions were limited. In the last two years, several advances have made it possible to asses the consequences of individual variations in non-coding regions\cite{Ongen2014,Khurana2013}, but no large-scale integrative studies have been performed (partly due to the current state of integrative methods). 
+
+Due to the affiliation with the University Medical Center Utrecht (UMCU), we are in the unique position to test our hypotheses and methods in both research and clinical settings. Furthermore, the HUB-biobank in the Hubrecht Institute enables us to also perform analyses on organoids, providing us a stable and homogeneous \textit{in vitro} platform for (validation-)studies on cancer-samples. With the new methods, we will be in the position to perform fully integrative studies on the underlying mechanisms and consequences of (structural) variation in cancer.
 
 \subsection*{Pilot-study}
-To asses to feasibility of our proposal, a small-scale pilot-study was performed on de data of \citet{VanHeesch2014}. This dataset includes transcriptome data of mRNA's, bound to a number of ribosomal units (1 to 7+) and matching exome-data. If one would be interested to look at the molecular functions of a gene, which transcripts have have a bias for one SNP, a disproportional amount of time is lost on parsing, intersecting and downloading various types of data (fig. \ref{fig:awesome_image}). With the current methods, twelve set-operations (e.g. intersections, unions) have to be performed on approximately 5gb of data and three datasets ($\pm$15gb) have to be completely downloaded before a simple exploratory question can be answered. Approximately three and a half hours was needed to perform this, in contrast to one hour with our methods. Of this hour, more than fifty minutes were used to convert VCF to RDF and load the 4store database: every query hereafter takes up approximately 10 minutes. This pilot illustrates two important factors: the low-complex nature of the proposed methods and the valuable property of having a separate query-stage, which results in being able to make more than ($\frac{(8*60)-50}{10}= $) forty queries in eight hours, instead of approximately ($\frac{8-3,5}{3,5}= $) two queries with the currently used methods.
+To asses to feasibility of our proposal, a small-scale pilot-study was performed on de data of \citet{VanHeesch2014}. This dataset includes transcriptome data of mRNA's, bound to a number of ribosomal units (1 to 7+) and matching exome-data. If one would be interested to look at the molecular functions of a gene, which transcripts have a bias for one allele, a disproportional amount of time is lost on parsing, intersecting and downloading various types of data (fig. \ref{fig:awesome_image}). With the current methods, twelve set-operations (e.g. intersections, unions) have to be performed on approximately 5gb of data and three datasets ($\pm$15gb) have to be completely downloaded (once, until a new version is launched) before a simple exploratory question can be answered. Approximately three and a half hours was needed to perform this, in contrast to one hour with our methods. Of this hour, more than fifty minutes were used to convert VCF to RDF and load the 4store database: every query hereafter takes up approximately 10 minutes. This pilot illustrates two important factors: the low-complex nature of the proposed methods and the valuable property of having a separate query-stage, which results in being able to make more than ($\frac{(8*60)-50}{10}= $) forty queries in eight hours, instead of approximately ($\frac{8-3,5}{3,5}= $) two queries with the currently used methods.
 
 \begin{figure}[H]
     \centering
@@ -239,7 +241,7 @@ Data acquisition will be performed throughout the study. Ongoing sequencing effo
 \noindent
 To ensure the greatest compatibility and effectiveness, tight collaborations will be established between leading RDF-users and -developers in- and outside of biology. Triples for NGS- and MS-based data will be developed, taking into account the most commonly used format first. Since different databases can require a specific triple-structure, RDF-databases will be investigated on their ability to handle the large datasets efficiently, including their in- and output options. Selected research groups in Utrecht will be attracted to provide early feedback-rounds, focussed on usability and compatibility. 
 
-Once the triple-development of a data-format is completed (i.e. end-users and the RDF-community have provided positive feedback), development of the conversion-tools is next. In this stage, we seek to expand the capabilities of current leading bioinformatical tools like Sambamba\cite{Tarasov2014} and BIO-VCF\cite{Goto2010}, to minimise the challenges associated with new software. Furthermore, we will seek to collaborate with the current (public data-focussed) initiatives, like Bio2RDF\cite{Belleau2008} and BioInterchange\cite{Baran} to ensure software-compatibility and limit redundancy.
+Once the triple-development of a data-format is completed (i.e. end-users and the RDF-community have provided positive feedback), development of the conversion-tools is next. In this stage, we seek to expand the capabilities of current leading bioinformatical tools like Sambamba\cite{Tarasov2014} and BIO-VCF\cite{Goto2010}, to capitalise on their multi-core capabilities. Furthermore, we will seek to collaborate with the current (public data-focussed) initiatives, like Bio2RDF\cite{Belleau2008} and BioInterchange\cite{Baran} to ensure software-compatibility and limit redundancy.
 \medskip
 
 \noindent
@@ -272,11 +274,11 @@ After a successful first phase, the second phase will broaden the available visu
 
 
 \subsection*{Collaboration}
-Ties with international leaders in biology-related semantic web and visualisation technologies have been made and will continue to be expanded. Joachim Baran and Pjotr Prins have been heavily involved in the planning stages, being key players in handling various data-formats (into RDF) with \textit{BIO-Ruby}. Communications with Artem Tarasov of \textit{Sambamba} and Jerven Bolleman -key engineer of the \textit{UniProt-RDF} project- have also been established.
-
 By performing this study in the Hubrecht Institute, we surround ourself with various research-fields within the scope of Developmental Biology. One of the newest findings of the Hubrecht are Organoids, which provide a method to study heterogeneous tissues (e.g. cancer) in more detail, by providing clonal (i.e. homogeneous) cultured tissues. Groups in the Hubrecht are heavily involved in (inter)national consortia, like the \textit{Cancer Genomics Centre}. This national consortium of research-groups, predominantly of the Hubrecht Institute and the Netherlands Cancer Institute (NKI), focusses on cancer's (epi)genetic alterations and responses to drugs. Data from this project will include various levels (e.g. (epi)genomics, phosphomics) and dimensions (e.g. drug-responses, time-series). 
 
 Furthermore, the affliciationg between the institute and Utrecht University will lead the more possibilities. A large amount of research groups make use of the Utrecht DNA-sequencing Facility and the Netherlands Proteomics Centre, which ensures adequate amounts and variation in data and data-integration-based research questions. 
+
+Ties with international leaders in biology-related semantic web and visualisation technologies have been made and will continue to be expanded. Joachim Baran and Pjotr Prins have been heavily involved in the planning stages, being key players in handling various data-formats (into RDF) with \textit{BIO-Ruby}. Communications with Artem Tarasov of \textit{Sambamba} and Jerven Bolleman -key engineer of the \textit{UniProt-RDF} project- have also been established.
 \section*{Knowledge utilisation}
 The implementation of RDF will be swift, since RDF already is a web-standard and a large amount of public biology-related sources are already in RDF-format. This will enable users of our methodologies to easily connect and integrate their data with public resources. Current statistical software, like the R environment, have packages (made by researchers from computer sciences) to extract and further analyse SPARQL-output. This means that users only have to learn SPARQL-queries, in order to use our methods.
 
